
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 long O_DIVIDE_ERROR ;
 long O_PAGE_OFFSET_BASE ;
 unsigned long PAGE_OFFSET_BASE ;
 int exit (int ) ;
 long g_kernel_text ;
 unsigned long g_physmap ;
 int info (char*,...) ;
 unsigned long read_8 (unsigned long) ;
 unsigned long read_idt_gate (int ) ;

__attribute__((used)) static void physmap_init() {
 unsigned long divide_error = read_idt_gate(0);
 info("[.] divide_error:     %016lx\n", divide_error);

 g_kernel_text = divide_error - O_DIVIDE_ERROR;
 info("[.] kernel text:      %016lx\n", g_kernel_text);

 if (O_PAGE_OFFSET_BASE) {
  unsigned long page_offset_base =
   g_kernel_text + O_PAGE_OFFSET_BASE;
  info("[.] page_offset_base: %016lx\n", page_offset_base);

  g_physmap = read_8(page_offset_base);
  info("[.] physmap:          %016lx\n", g_physmap);
  if (g_physmap < PAGE_OFFSET_BASE) {
   info("[-] physmap sanity check failed "
     "(wrong offset?)\n");
   exit(EXIT_FAILURE);
  }
 } else {
  g_physmap = PAGE_OFFSET_BASE;
  info("[.] physmap:          %016lx\n", g_physmap);
 }
}
